--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,9 @@
     "normalize.css": "~3.0.3",
     "angular": "~1.4.1",
     "angular-route": "~1.4.1",
-    "foundation": "~5.5.2"
+    "foundation": "~5.5.2",
+    "font-awesome": "~4.3.0",
+    "Cookies": "~1.2.1"
   },
   "devDependencies": {
     "mocha": "~2.2.5",
